# datashop_toolbox

./: .gitignore  Process_mtr_files_To_ODF.py  README.md  main.py  pyproject.toml  run_MTR_tools.py  run_SEABIRD_tools.py  text.md
src/cotede/: __init__.py  datasets.py  qc.py  version.py
src/cotede/anomaly_detection/: __init__.py  anomaly_detection.py
src/cotede/fuzzy/: __init__.py  defuzz.py  fuzzy_core.py  membership_functions.py
src/cotede/humanqc/: humaneval.py
src/cotede/qctests/: __init__.py  anomaly_detection.py  bin_spike.py  cars_normbias.py  constant_cluster_size.py  core.py  cum_rate_of_change.py  deepest_pressure.py  density_inversion.py  descentPrate.py  digit_roll_over.py  fuzzylogic.py  global_range.py  gradient.py  gradient_depthconditional.py  location_at_sea.py  monotonic_z.py  morello2014.py  possible_speed.py  profile_envelop.py  qctests.py  rate_of_change.py  regional_range.py  spike.py  spike_depthconditional.py  stuck_value.py  tukey53H.py  valid_geolocation.py  woa_normbias.py
src/cotede/utils/: __init__.py  config.py  utils.py
src/datashop_toolbox/: __init__.py  add_qfs_working_code.ipynb  ai_thermograph_data.py  basehdr.py  compare_seabird_xmlcons.py  compasshdr.py  create_parameters_database.py  cruisehdr.py  eventhdr.py  fix_btl_header.py  generalhdr.py  generate_metadata_report.py  historyhdr.py  instrumenthdr.py  log_window.py  lookup_parameter.py  metadata_report.py  meteohdr.py  multinet.py  netcdfhdr.py  odf_to_exchange_format.py  odfhdr.py  parameterhdr.py  plot_mtr_data.py  polynomialhdr.py  process_mtr_files.py  qc_ctd_data.py  qc_odf_data.py  qc_thermograph_data.py  qc_thermograph_data_old.py  qc_thermograph_data_recent.py  qualityhdr.py  rbr_to_odf.py  read_seaodf_ini.py  read_seaodf_parameters.py  recordhdr.py  records.py  remove_parameter.py  select_metadata_file_and_data_folder.py  thermograph.py  (+1 more)
src/datashop_toolbox/database/: parameters.db
src/datashop_toolbox/gui/: __init__.py  example_btl_generation.py  mardid_test_connection.py  odf_metadata_dialog.py  odf_metadata_form.py  odf_metadata_form.ui  qc_window.py  qc_window.ui  rbr_profile_plot.py  rbr_to_odf.ui  rbr_to_odf_mainwindow.py  thermograph_gui_loader.py  ui_odf_metadata_form.py  ui_rbr_to_odf.py  ui_rsk_plot_dialog.py  ui_thermograph_main_window.py
src/datashop_toolbox/gui/Datashop_Toolbox_GUI/: thermograph_gui_loader.py
src/datashop_toolbox/gui/rbr_to_odf_gui/rbr_to_odf_ui/: odf_metadata_dialog.py  odf_metadata_form.py  odf_metadata_form.ui  rbr_profile_plot.py  rbr_to_odf.ui  rbr_to_odf_mainwindow.py  rsk_plot_dialog.ui  ui_odf_metadata_form.py  ui_rbr_to_odf.py  ui_rsk_plot_dialog.py
src/datashop_toolbox/gui/rbr_to_odf_gui/rbr_to_odf_ui/styles/: rbr_to_odf.qss
src/datashop_toolbox/lookups/: seaodf_parameters.csv
src/datashop_toolbox/temporary/: .last_ctd_qc_reviewer.json  .last_reviewer_metadata.json  .mtr_last_reviewer_metadata.json  .mtr_last_user_metadata.json
src/datashop_toolbox/ui/: odf_metadata_dialog.py  odf_metadata_form.py  odf_metadata_form.ui  rbr_profile_plot.py  rbr_to_odf_mainwindow.py  ui_odf_metadata_form.py  ui_rbr_to_odf.py
src/odf_oracle/: __init__.py  cruise_event_to_oracle.py  event_comments_to_oracle.py  load_files_to_odf_archive_db.py  meteo_comments_to_oracle.py  odf_to_oracle.py  quality_to_oracle.py  sytm_to_timestamp.py
src/seabird/: __init__.py  cli.py  cnv.py  netcdf.py  utils.py  version.py
tests/: cotede_test.py  test_file_handling.py  test_imports.py  test_odf_class.py  test_validated_base.py  update_91001.py  update_BCD2024669.py  update_CAR2024010.py  update_HUD2014030.py
