[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datashop-toolbox"
version = "1.0.6.3"
description = "Python toolbox for oceanographic data processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # --- Runtime dependencies (end-user required) ---
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "oracledb>=3.3.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pyqtgraph>=0.14.0",
    "pyrsktools>=1.1.1",
    "pyside6>=6.10.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "termcolor>=3.1.0",
]

# --- Dependency groups (PEP 735 / uv standard) ---
[dependency-groups]

# Static typing / IDE / type checking
typing = [
    "pandas-stubs>=2.3.2.250926",
]

# Development tooling
dev = [
    "icecream>=2.1.7",
    "ruff>=0.15.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"datashop_toolbox" = ["database/parameters.db", "gui/**/*.ui", "gui/templates/*.json"]

# --- Ruff configuration ---
[tool.ruff]
line-length = 120
target-version = "py311"

# Enable Ruff formatter (optional; only if you want Ruff to be the formatter)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Choose rulesets to enable; E,F are core; I for import sorting; B for bugbear; UP for pyupgrade
select = ["E", "F", "I", "B", "UP"]
ignore = [
  # example: "E203", "E266"
]

# Per-file ignores (example)
[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]   # allow asserts in tests

# Exclusions (example)
[tool.ruff.lint.source]
exclude = [
  ".venv",
  "build",
  "dist"
]
