[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datashop-toolbox"
version = "1.0.7.8"
description = "Python toolbox for oceanographic data processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # --- Runtime dependencies (end-user required) ---
    "python-dotenv>=0.9.9",
    "jinja2>=3.1.4",
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "oracledb>=2.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "pyqtgraph>=0.13.0",
    "pyrsktools>=1.1.1",
    "pyside6>=6.7.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "seabirdscientific",
    "termcolor>=2.4.0",
]

# --- Dependency groups (PEP 735 / uv standard) ---
[dependency-groups]

# Static typing / IDE / type checking
typing = [
    "pandas-stubs>=2.2.0",
]

# Development tooling
dev = [
    "icecream>=2.1.3",
    "ruff>=0.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"datashop_toolbox" = ["database/parameters.db", "gui/**/*.ui", "gui/templates/*.json"]

# --- Ruff configuration ---
[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]

[tool.uv.sources]
seabirdscientific = { path = "../seabirdscientific/dist/seabirdscientific-3.0.0a1-py3-none-any.whl" }
